--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 </head>
 
 <body>
+  <!-- Mobile Audio Start Overlay -->
+<div id="audio-start">
+  <span>Tap to Start ❤️</span>
+</div>
 
     <audio class="song" loop autoplay>
         <source src="./music/song.mp4">
