--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="three">
-            <p>It's your birthday!! :D</p>
+            <p>It's your birthday!! ❤️</p>
         </div>
 
         <div class="four">
@@ -90,7 +90,8 @@
             <img src="./img/image.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
-                <h3 class="wish-hbd">Happy Birthday Amma!</h3>
+                <h3 class="wish-hbd">Happy Birthday</h3>
+                <h3 class="wish-hbd">Amma!</h3>
                 <h5 id="wishText">Thank you for everything you sacrificed for me.  
 I love you always.</h5>
             </div>
