--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday</h3>
-                <h3 class="wish-hbd">Amma!</h3>
+                <h3 class="wish-hbd1">Amma!</h3>
                 <h5 id="wishText">Thank you for everything you sacrificed for me.  
 I love you always.</h5>
             </div>
