--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <img src="./img/image.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
-                <h3 class="wish-hbd">Happy Birthday<br>Amma!</h3>
+                <h3 class="wish-hbd">Happy Birthday<span class="break">Amma!</h3>
                 <h5 id="wishText">Thank you for everything you sacrificed for me.  
 I love you always.</h5>
             </div>
